// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas sobre el componente <ProductTitle/> Debe de mostar el componente con el nombre del producto 1`] = `
<div
  className="productCard undefined"
>
  <span
    className="productDescription undefined"
  >
     
    Coffe-Mug
     
  </span>
</div>
`;

exports[`Pruebas sobre el componente <ProductTitle/> Debe de mostrar el componente correctamente con el titulo personalizado 1`] = `
<span
  className="productDescription undefined"
>
   
  Custom Product
   
</span>
`;
